2003-03-13  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03818] fix autoconf
	* Makefile.in (CGIBIN_DIR): added
		(AUXBIN_DIR): added
		(HELP_DIR): added
		(RC_DIR): added
		(MAKE_ARGS): added
		(TARGET): use $(package)
		(MAN1_TARGET): ditto
		(install): use $(*_DIR)
	* acinclude.m4 (AC_W3M_TERMLIB): added
		(AC_W3M_GC): default search prefix /usr /usr/local $HOME
			fix searches
		(AC_W3M_SSL): fix bugs
	* config.h (RC_DIR): remove tailing /
		(SYS_MAILCAP): use ETC_DIR
		(SYS_MIMETYPES): ditto
		(USER_MIMETYPES): homedir
	* configure.in: quote
		(AC_W3M_TERMLIB): use
	* Bonus/oldconfigure.sh: rewrite

2003-03-12  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03816] --enable-lynx => --enable-keymap=lynx 
	* acinclude.m4 (AC_W3M_KEYMAP): --enable-lynx => --enable-keymap=lynx
	* Bonus/oldconfigure.sh: ditto

2003-03-12  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03814] fix autoconf
	* acinclude.m4: quote variables
	* Bonus/oldconfigure.sh: configure using old config.param

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03812] fix autoconf
	* acinclude.m4 (AC_W3M_IMAGE): default is autodetect x11,fb

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03810] fix autoconf
	* acinclude.m4 (AC_W3M_EXTLIBS): use $dir
			(AC_W3M_GC): PREFIX is optional
			(AC_W3M_SSL): PREFIX is optional
				with_ssl=yes, check usual dirs
				use $dir
			(AC_W3M_IPv6): use $dir

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03809] fix autoconf
	* acinclude.m4 (AC_W3M_CHECK_VER): accept version like "1.9.13-2"

2003-03-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
	
	* [w3m-dev 03808] fix autoconf
	* acinclude.m4 (AC_W3M_GC): --with-gc takes PREFIX
				check include first
		(AC_W3M_CHECK_VER): show checking message
		(AC_W3M_IMAGE): if gdkpixbuf found, don't check imlib*

2003-03-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile.in (MODEL): delete @W3M_TARGET@
	* configure.in: AC_SUBST(W3M_TARGET)
